<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".ui.quiz.QuizFragment">

    <TextView
        android:id="@+id/text_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/quiz_info"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        tools:visibility="gone" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="301dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/yellow"
        android:paddingHorizontal="64dp"
        android:text="@string/start_game"
        android:textColor="@color/black"
        android:visibility="visible"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="@+id/text_quiz"
        app:layout_constraintTop_toBottomOf="@+id/text_quiz"
        tools:visibility="gone" />

    <Button
        android:id="@+id/questions_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/yellow"
        android:enabled="false"
        android:text="@string/temp_cur"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/text_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questions_block"
        tools:visibility="visible" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/yellow"
        android:enabled="false"
        android:paddingVertical="16dp"
        android:text="@string/next"
        android:textColor="@color/bad_yellow"
        android:visibility="invisible"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/a1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Button"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:backgroundTint="@color/gray"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/a3"
        app:layout_constraintEnd_toStartOf="@+id/a2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionText"
        tools:visibility="visible" />

    <Button
        android:id="@+id/select_a1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_rounded"
        android:text="@string/your_choice"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/a1"
        app:layout_constraintTop_toTopOf="@+id/a1"
        tools:visibility="visible" />

    <Button
        android:id="@+id/true_a1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_rounded"
        android:text="@string/true_choice"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/a1"
        app:layout_constraintTop_toTopOf="@+id/a1"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/a2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Button"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:backgroundTint="@color/gray"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/a4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/a1"
        app:layout_constraintTop_toBottomOf="@+id/questionText"
        app:strokeColor="@color/green"
        tools:visibility="visible" />

    <Button
        android:id="@+id/select_a2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_rounded"
        android:text="@string/your_choice"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/a2"
        app:layout_constraintTop_toTopOf="@+id/a2"
        tools:visibility="gone" />

    <Button
        android:id="@+id/true_a2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_rounded"
        android:text="@string/true_choice"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/a2"
        app:layout_constraintTop_toTopOf="@+id/a2"
        tools:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/a3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="Button"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:backgroundTint="@color/gray"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toStartOf="@+id/a4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a1"
        app:strokeColor="@color/green"
        tools:visibility="visible" />

    <Button
        android:id="@+id/select_a3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_rounded"
        android:text="@string/your_choice"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/a3"
        app:layout_constraintTop_toTopOf="@+id/a3"
        tools:visibility="gone" />

    <Button
        android:id="@+id/true_a3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_rounded"
        android:text="@string/true_choice"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/a3"
        app:layout_constraintTop_toTopOf="@+id/a3"
        tools:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/a4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Button"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:backgroundTint="@color/gray"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/a3"
        app:layout_constraintTop_toBottomOf="@+id/a2"
        tools:visibility="visible" />

    <Button
        android:id="@+id/select_a4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_rounded"
        android:text="@string/your_choice"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/a4"
        app:layout_constraintTop_toTopOf="@+id/a4"
        tools:visibility="gone" />

    <Button
        android:id="@+id/true_a4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_rounded"
        android:text="@string/true_choice"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/a4"
        app:layout_constraintTop_toTopOf="@+id/a4"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/gratzImage"
        android:layout_width="165dp"
        android:layout_height="168dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/iconhlop"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/questionText"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/gratz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Поздравляем!"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/gratzImage"
        app:layout_constraintStart_toStartOf="@+id/gratzImage"
        app:layout_constraintTop_toBottomOf="@+id/gratzImage"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/results"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:lineSpacingExtra="8sp"
        android:text="Вы ответили на 0 вопросов из 10. Можно сказать, что вы хорошо знаете факты о лисах"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gratz"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>